[package]
name = "yahboom_rover"
version = "0.1.0"
edition = "2021"

[package.metadata.scripts]
led_blink = "cross build --example led_blink"

[dependencies]
# Pi
rppal = { version = "0.22.1", features = ["embedded-hal"] }
embedded-hal = "1.0.0"
# Utils
derive_more = { version = "2.0.1", features = ["from"] }